# cppTraining

./: CMakeLists.txt  README.org  generator.cpp  main.cpp  makefile  todoList.org
include/: enemy.h  globals.h  hero.h  interface.h  levels.h
lib/: enemy.cpp  hero.cpp  interface.cpp
